--- a/css/form.css
+++ b/css/form.css
@@ -1,3 +1,11 @@
 .clear{
 clear: both;
 }
+#radius {
+    background-color: red;
+    -moz-border-radius:10px;      
+    -webkit-border-radius:10px;
+    border-radius:10px;
+    width: 200px;
+    behavior:url(PIE.htc);
+}
